--- a/assets/titlepage.tex
+++ b/assets/titlepage.tex
@@ -38,10 +38,11 @@
 \newpage
 
 
-\begin{tabu} to 0.9\linewidth { X  X | X | X }
+
+\begin{tabu} to \textwidth { X  X | X | X }
 \toprule
 
- 
+
 \multicolumn{2}{l |}{ \multirow{4}{*}{  \includegraphics[width=7cm]{figures/Inedit_horiz.pdf} } }  & Work Package: & 6   \\ \cmidrule{3-4}
    & & Type of document:  & Deliverable        \\ \cmidrule{3-4}
 
@@ -57,15 +58,13 @@
  Dissemination Level    &  \multicolumn{3}{|l}{ Public }  \\ \midrule
  Title:    &   \multicolumn{3}{|l}{ Report on the 3D printing of Recycled Plastic Demonstrator }    \\ \hline
 
- Description:    &    \multicolumn{3}{| l}{ Description of the conceptual framework of distributed recycling }   \\ 
- &    \multicolumn{3}{| l}{via additive manufacturing (DRAM) and its concrete implemnetation in a DIT approach. }   \\ 
-    &    \multicolumn{3}{| l}{The technologies, materials and methods are reported}   \\
-    &    \multicolumn{3}{| l}{Sevearal illustrative case studies are presented }   \\ \midrule
-
- Version    &   \multicolumn{3}{|l}{ Version 2}    \\ \midrule
- Contributors       & Versions    & Dates       & Revision Description \\ \midrule
-WP6 Leader & 0 & February 04/2023 & Validation of the global structure  \\ \midrule        
-UL & 1 & March 03/2022 & Revision of a version 1 \\ \midrule
+ Description:    &    \multicolumn{3}{| p{\dimexpr0.75\linewidth-2\tabcolsep\relax}}{ Description of the conceptual framework of distributed recycling via additive manufacturing (DRAM) and its concrete implemnetation in a DIT approach. The technologies, materials and methods are reported Sevearal illustrative case studies are presented}   \\ \midrule
+ 
+ 
+ \multicolumn{1}{l|}{Version}     &   \multicolumn{3}{|l}{ Version 2}    \\ \midrule
+ \multicolumn{1}{l|}{Contributors}       & Versions    & Dates       & Revision Description \\ \midrule
+\multicolumn{1}{l|}{WP6 Leader} & 0 & February 04/2023 & Validation of the global structure  \\ \midrule        
+\multicolumn{1}{l|}{UL} & 1 & March 03/2022 & Revision of a version 1 \\ \midrule
         
 \end{tabu}
 
