--- a/assets/packages.tex
+++ b/assets/packages.tex
@@ -10,7 +10,7 @@
 \usepackage{titlesec}
 
 \titleformat{\section}{\sffamily\Large\bfseries\rlap{\color{gray}\rule[-2ex]{\linewidth}{4ex}\vspace{-4ex}}\sffamily\Large\bfseries\color{white}}{\thesection}{1em}{}
-\newcommand{\sectionbreak}{\clearpage}
+%\newcommand{\sectionbreak}{\clearpage}
 
 %\usepackage{graphicx}
 %\usepackage[, x11names]{xcolor}
