--- a/assets/titlepage.tex
+++ b/assets/titlepage.tex
@@ -20,8 +20,8 @@
       
 		\vspace{5pt}
 		\begin{tabular}{ c p{8cm} c }
-           & & Version 1.0  \\ 
-         WP6 T6.5  & & January 2023   \\ 
+           & & Version 3.0  \\ 
+         WP6 T6.4  & & March 2023   \\ 
       \end{tabular}
 		\vspace{5pt} 
 		
@@ -39,7 +39,7 @@
 
 
 
-\begin{tabu} to \textwidth { X  X | X | X }
+\begin{tabu} to \textwidth { X  X[0.7] | X | X }
 \toprule
 
 
@@ -48,7 +48,7 @@
 
    & & Due Delivery Date:    & January 31/2023     \\ \cmidrule{3-4}
  
-   & & Actual Delivery Date:    & March xx / 2023       \\ \midrule
+   & & Actual Delivery Date:    & March 2023       \\ \midrule
  
 
 \multicolumn{4}{l|}{ } \\ \midrule
@@ -61,11 +61,11 @@
  Description:    &    \multicolumn{3}{| p{\dimexpr0.75\linewidth-2\tabcolsep\relax}}{ Description of the conceptual framework of distributed recycling via additive manufacturing (DRAM) and its concrete implemnetation in a DIT approach. The technologies, materials and methods are reported Sevearal illustrative case studies are presented}   \\ \midrule
  
  
- \multicolumn{1}{l|}{Version}     &   \multicolumn{3}{|l}{ Version 2}    \\ \midrule
+ \multicolumn{1}{l|}{Version}     &   \multicolumn{3}{|l}{ Version 3}    \\ \midrule
  \multicolumn{1}{l|}{Contributors}       & Versions    & Dates       & Revision Description \\ \midrule
 \multicolumn{1}{l|}{WP6 Leader} & 0 & February 04/2023 & Validation of the global structure  \\ \midrule        
 \multicolumn{1}{l|}{UL} & 1 & March 03/2022 & Revision of a version 1 \\ \midrule
-        
+\multicolumn{1}{l|}{UL and SCM} & 2 & March 17/2022 & Revision of a version 2 given the received comments \\ \midrule        
 \end{tabu}
 
 
