--- a/assets/titlepage.tex
+++ b/assets/titlepage.tex
@@ -58,7 +58,9 @@
  Dissemination Level    &  \multicolumn{3}{|l}{ Public }  \\ \midrule
  Title:    &   \multicolumn{3}{|l}{ Report on the 3D printing of Recycled Plastic Demonstrator }    \\ \hline
 
- Description:    &    \multicolumn{3}{| p{\dimexpr0.75\linewidth-2\tabcolsep\relax}}{ Description of the conceptual framework of distributed recycling via additive manufacturing (DRAM) and its concrete implemnetation in a DIT approach. The technologies, materials and methods are reported Sevearal illustrative case studies are presented}   \\ \midrule
+ Description:    &    \multicolumn{3}{| p{\dimexpr0.75\linewidth-2\tabcolsep\relax}}{
+Description of the conceptual framework of distributed recycling via additive manufacturing (DRAM) and its concrete implementation in a DIT approach. The technologies, materials and methods are reported. Several illustrative case studies are presented.
+}   \\ \midrule
  
  
  \multicolumn{1}{l|}{Version}     &   \multicolumn{3}{|l}{ Version 3}    \\ \midrule
