--- a/Livrable.tex
+++ b/Livrable.tex
@@ -223,7 +223,6 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Delivrable WP IN construction},
   colorlinks=true,
   linkcolor={Blue},
   filecolor={Maroon},
@@ -231,19 +230,17 @@
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{Delivrable WP IN construction}
 \usepackage{etoolbox}
 \makeatletter
 \providecommand{\subtitle}[1]{% add subtitle to \maketitle
   \apptocmd{\@title}{\par {\large #1 \par}}{}{}
 }
 \makeatother
-\subtitle{Version: March 29 / 2023 - 17 : 37}
+\subtitle{Version: March 29 / 2023 - 17 : 46}
 \author{}
 \date{}
 
 \begin{document}
-\maketitle
 
 \begin{titlepage}
 	\begin{center}
@@ -304,7 +301,9 @@
  Dissemination Level    &  \multicolumn{3}{|l}{ Public }  \\ \midrule
  Title:    &   \multicolumn{3}{|l}{ Report on the 3D printing of Recycled Plastic Demonstrator }    \\ \hline
 
- Description:    &    \multicolumn{3}{| p{\dimexpr0.75\linewidth-2\tabcolsep\relax}}{ Description of the conceptual framework of distributed recycling via additive manufacturing (DRAM) and its concrete implemnetation in a DIT approach. The technologies, materials and methods are reported Sevearal illustrative case studies are presented}   \\ \midrule
+ Description:    &    \multicolumn{3}{| p{\dimexpr0.75\linewidth-2\tabcolsep\relax}}{
+Description of the conceptual framework of distributed recycling via additive manufacturing (DRAM) and its concrete implementation in a DIT approach. The technologies, materials and methods are reported. Several illustrative case studies are presented.
+}   \\ \midrule
  
  
  \multicolumn{1}{l|}{Version}     &   \multicolumn{3}{|l}{ Version 3}    \\ \midrule
@@ -332,7 +331,7 @@ This document reflects only the authors' view and the Commission is not responsi
 
 \newpage
 
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[interior hidden, enhanced, breakable, frame hidden, borderline west={3pt}{0pt}{shadecolor}, sharp corners, boxrule=0pt]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[frame hidden, boxrule=0pt, enhanced, interior hidden, breakable, borderline west={3pt}{0pt}{shadecolor}, sharp corners]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Table of contents}
 {
@@ -1915,7 +1914,7 @@ collected 3kg per week.
 
 \end{figure}
 
-\begin{tcolorbox}[enhanced jigsaw, arc=.35mm, leftrule=.75mm, coltitle=black, colframe=quarto-callout-note-color-frame, left=2mm, toprule=.15mm, colback=white, rightrule=.15mm, bottomrule=.15mm, opacityback=0, colbacktitle=quarto-callout-note-color!10!white, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the Recovery process}, titlerule=0mm, breakable, bottomtitle=1mm, opacitybacktitle=0.6]
+\begin{tcolorbox}[enhanced jigsaw, rightrule=.15mm, coltitle=black, breakable, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the Recovery process}, titlerule=0mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, arc=.35mm, toprule=.15mm, leftrule=.75mm, colbacktitle=quarto-callout-note-color!10!white, toptitle=1mm, left=2mm, colback=white, bottomrule=.15mm]
 
 In terms of \emph{KPI} of the recovery, from February 2022 to February
 2023, we have collected a total of \(94.37~kg\) of plastic waste using 8
@@ -2014,7 +2013,7 @@ it is necessary to sieve to identify the optimum size.
 
 \end{figure}
 
-\begin{tcolorbox}[enhanced jigsaw, arc=.35mm, leftrule=.75mm, coltitle=black, colframe=quarto-callout-note-color-frame, left=2mm, toprule=.15mm, colback=white, rightrule=.15mm, bottomrule=.15mm, opacityback=0, colbacktitle=quarto-callout-note-color!10!white, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the FGF}, titlerule=0mm, breakable, bottomtitle=1mm, opacitybacktitle=0.6]
+\begin{tcolorbox}[enhanced jigsaw, rightrule=.15mm, coltitle=black, breakable, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the FGF}, titlerule=0mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, arc=.35mm, toprule=.15mm, leftrule=.75mm, colbacktitle=quarto-callout-note-color!10!white, toptitle=1mm, left=2mm, colback=white, bottomrule=.15mm]
 
 For fused granular fabrication technology, the optimum size for the
 granulometry for printing is between 3 and 5mm. In terms of plastic
