--- a/assets/titlepage.tex
+++ b/assets/titlepage.tex
@@ -86,4 +86,37 @@ This document reflects only the authors' view and the Commission is not responsi
 \end{center}
 \normalsize
 
+
+\newpage
+
+\vfill
+
+
+
+\textbf{Scientific editor:} \newline
+Asst. Prof. Fabio A. CRUZ SANCHEZ, Task Leader – ORCID: \href{https://orcid.org/0000-0001-8529-5327}{https://orcid.org/0000-0001-8529-5327} \newline
+Université de Lorraine, ERPI, F-54 000 Nancy, France \newline
+Contact: fabio.cruz@univ-lorraine.fr 
+
+\vspace{2cm}
+
+\textbf{Authors:} \newline
+PhD. Fabio A. CRUZ SANCHEZ, M.Sc. Cristian CACERES-MENDOZA, PhD. Fedoua KASMI, PhD. Laurent DUPONT \newline
+Université de Lorraine, ERPI, F-54000 Nancy, France \newline
+Contact: fabio.cruz@univ-lorraine.fr 
+
+\vspace{2cm}
+
+\textbf{Acknowledgment:}\newline
+The authors thank the INEDIT consortium.
+
+\vspace{2cm}
+
+\textbf{How to cite:} \newline
+Fabio A. Cruz Sanchez, Cristian Caceres Mendoza, Fédoua Kasmi, Laurent Dupont. 
+INEDIT Project - Deliverable 6.4 - 3D Printing of recycled plastic demonstrator. 
+Université de Lorraine; European Union’s Horizon 2020 research and innovation programme. 2023 ⟨hal-04371315⟩
+
+
+\vfill
 \newpage
