--- a/Livrable.tex
+++ b/Livrable.tex
@@ -8,7 +8,6 @@
 ]{article}
 
 \usepackage{amsmath,amssymb}
-\usepackage{lmodern}
 \usepackage{iftex}
 \ifPDFTeX
   \usepackage[T1]{fontenc}
@@ -18,6 +17,10 @@
   \usepackage{unicode-math}
   \defaultfontfeatures{Scale=MatchLowercase}
   \defaultfontfeatures[\rmfamily]{Ligatures=TeX,Scale=1}
+\fi
+\usepackage{lmodern}
+\ifPDFTeX\else  
+    % xetex/luatex font selection
   \setmainfont[]{Trebuchet MS}
 \fi
 % Use upquote if available, for straight quotes in verbatim environments
@@ -150,7 +153,7 @@
 \usepackage{makecell}
 \usepackage{xcolor}
 \makeatletter
-\@ifpackageloaded{tcolorbox}{}{\usepackage[many]{tcolorbox}}
+\@ifpackageloaded{tcolorbox}{}{\usepackage[skins,breakable]{tcolorbox}}
 \@ifpackageloaded{fontawesome5}{}{\usepackage{fontawesome5}}
 \definecolor{quarto-callout-color}{HTML}{909090}
 \definecolor{quarto-callout-note-color}{HTML}{0758E5}
@@ -209,10 +212,12 @@
 \@ifpackageloaded{subcaption}{}{\usepackage{subcaption}}
 \makeatother
 \makeatletter
-\@ifpackageloaded{tcolorbox}{}{\usepackage[many]{tcolorbox}}
+\@ifpackageloaded{tcolorbox}{}{\usepackage[skins,breakable]{tcolorbox}}
 \makeatother
 \makeatletter
 \@ifundefined{shadecolor}{\definecolor{shadecolor}{rgb}{.97, .97, .97}}
+\makeatother
+\makeatletter
 \makeatother
 \makeatletter
 \makeatother
@@ -236,7 +241,7 @@
   \apptocmd{\@title}{\par {\large #1 \par}}{}{}
 }
 \makeatother
-\subtitle{Version: March 29 / 2023 - 17 : 46}
+\subtitle{Version: janvier 03 / 2024 - 21 : 45}
 \author{}
 \date{}
 
@@ -329,9 +334,42 @@ This document reflects only the authors' view and the Commission is not responsi
 \end{center}
 \normalsize
 
+
 \newpage
 
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[frame hidden, boxrule=0pt, enhanced, interior hidden, breakable, borderline west={3pt}{0pt}{shadecolor}, sharp corners]}{\end{tcolorbox}}\fi
+\vfill
+
+
+
+\textbf{Scientific editor:} \newline
+Asst. Prof. Fabio A. CRUZ SANCHEZ, Task Leader – ORCID: \href{https://orcid.org/0000-0001-8529-5327}{https://orcid.org/0000-0001-8529-5327} \newline
+Université de Lorraine, ERPI, F-54 000 Nancy, France \newline
+Contact: fabio.cruz@univ-lorraine.fr 
+
+\vspace{2cm}
+
+\textbf{Authors:} \newline
+PhD. Fabio A. CRUZ SANCHEZ, M.Sc. Cristian CACERES-MENDOZA, PhD. Fedoua KASMI, PhD. Laurent DUPONT \newline
+Université de Lorraine, ERPI, F-54000 Nancy, France \newline
+Contact: fabio.cruz@univ-lorraine.fr 
+
+\vspace{2cm}
+
+\textbf{Acknowledgment:}\newline
+The authors thank the INEDIT consortium.
+
+\vspace{2cm}
+
+\textbf{How to cite:} \newline
+Fabio A. Cruz Sanchez, Cristian Caceres Mendoza, Fédoua Kasmi, Laurent Dupont. 
+INEDIT Project - Deliverable 6.4 - 3D Printing of recycled plastic demonstrator. 
+Université de Lorraine; European Union’s Horizon 2020 research and innovation programme. 2023 ⟨hal-04371315⟩
+
+
+\vfill
+\newpage
+
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[interior hidden, enhanced, boxrule=0pt, sharp corners, frame hidden, borderline west={3pt}{0pt}{shadecolor}, breakable]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Table of contents}
 {
@@ -1914,7 +1952,7 @@ collected 3kg per week.
 
 \end{figure}
 
-\begin{tcolorbox}[enhanced jigsaw, rightrule=.15mm, coltitle=black, breakable, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the Recovery process}, titlerule=0mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, arc=.35mm, toprule=.15mm, leftrule=.75mm, colbacktitle=quarto-callout-note-color!10!white, toptitle=1mm, left=2mm, colback=white, bottomrule=.15mm]
+\begin{tcolorbox}[enhanced jigsaw, opacitybacktitle=0.6, colback=white, bottomrule=.15mm, opacityback=0, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the Recovery process}, leftrule=.75mm, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, breakable, colframe=quarto-callout-note-color-frame, rightrule=.15mm, toptitle=1mm, titlerule=0mm, left=2mm, arc=.35mm, toprule=.15mm]
 
 In terms of \emph{KPI} of the recovery, from February 2022 to February
 2023, we have collected a total of \(94.37~kg\) of plastic waste using 8
@@ -2013,7 +2051,7 @@ it is necessary to sieve to identify the optimum size.
 
 \end{figure}
 
-\begin{tcolorbox}[enhanced jigsaw, rightrule=.15mm, coltitle=black, breakable, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the FGF}, titlerule=0mm, opacitybacktitle=0.6, opacityback=0, colframe=quarto-callout-note-color-frame, arc=.35mm, toprule=.15mm, leftrule=.75mm, colbacktitle=quarto-callout-note-color!10!white, toptitle=1mm, left=2mm, colback=white, bottomrule=.15mm]
+\begin{tcolorbox}[enhanced jigsaw, opacitybacktitle=0.6, colback=white, bottomrule=.15mm, opacityback=0, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the FGF}, leftrule=.75mm, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, breakable, colframe=quarto-callout-note-color-frame, rightrule=.15mm, toptitle=1mm, titlerule=0mm, left=2mm, arc=.35mm, toprule=.15mm]
 
 For fused granular fabrication technology, the optimum size for the
 granulometry for printing is between 3 and 5mm. In terms of plastic
@@ -2073,10 +2111,12 @@ the OS SuperSlicer software}
 {\centering 
 
 \begin{longtable}[]{@{}ll@{}}
-\toprule()
+\toprule\noalign{}
 Main parameters & Value \\
-\midrule()
+\midrule\noalign{}
 \endhead
+\bottomrule\noalign{}
+\endlastfoot
 Material & PET recycled \\
 Bed temperature & 84 °C \\
 Extrusion factor & 1.32 \\
@@ -2088,7 +2128,6 @@ Fill density & 30\% \\
 Travel speed & 20 mm/S \\
 Nozzle Diameter & 1.75 mm \\
 Support & No \\
-\bottomrule()
 \end{longtable}
 
 }
