--- a/Livrable.tex
+++ b/Livrable.tex
@@ -241,7 +241,7 @@
   \apptocmd{\@title}{\par {\large #1 \par}}{}{}
 }
 \makeatother
-\subtitle{Version: janvier 03 / 2024 - 21 : 45}
+\subtitle{Version: janvier 04 / 2024 - 12 : 01}
 \author{}
 \date{}
 
@@ -356,8 +356,11 @@ Contact: fabio.cruz@univ-lorraine.fr
 \vspace{2cm}
 
 \textbf{Acknowledgment:}\newline
-The authors thank the INEDIT consortium.
-
+The authors express their gratitude to the INEDIT consortium. 
+Additionally, appreciation is extended to the 'Octroi Nancy' Local Third Place and the local actors in Nancy who actively participated in the experimentation of the smart collector. 
+Lastly, the authors acknowledge the valuable scientific collaboration with the Western University in Ontario, Canada, 
+Universidade de Vigo in Spain, 
+and  LRGP (Université de Lorraine) and CESI School in France.
 \vspace{2cm}
 
 \textbf{How to cite:} \newline
@@ -369,7 +372,7 @@ Université de Lorraine; European Union’s Horizon 2020 research and innovation
 \vfill
 \newpage
 
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[interior hidden, enhanced, boxrule=0pt, sharp corners, frame hidden, borderline west={3pt}{0pt}{shadecolor}, breakable]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[enhanced, boxrule=0pt, interior hidden, frame hidden, breakable, borderline west={3pt}{0pt}{shadecolor}, sharp corners]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Table of contents}
 {
@@ -1952,7 +1955,7 @@ collected 3kg per week.
 
 \end{figure}
 
-\begin{tcolorbox}[enhanced jigsaw, opacitybacktitle=0.6, colback=white, bottomrule=.15mm, opacityback=0, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the Recovery process}, leftrule=.75mm, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, breakable, colframe=quarto-callout-note-color-frame, rightrule=.15mm, toptitle=1mm, titlerule=0mm, left=2mm, arc=.35mm, toprule=.15mm]
+\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the Recovery process}, bottomtitle=1mm, toprule=.15mm, breakable, toptitle=1mm, colframe=quarto-callout-note-color-frame, titlerule=0mm, opacitybacktitle=0.6, colback=white, left=2mm, colbacktitle=quarto-callout-note-color!10!white, arc=.35mm, coltitle=black, rightrule=.15mm, bottomrule=.15mm, leftrule=.75mm, opacityback=0]
 
 In terms of \emph{KPI} of the recovery, from February 2022 to February
 2023, we have collected a total of \(94.37~kg\) of plastic waste using 8
@@ -2051,7 +2054,7 @@ it is necessary to sieve to identify the optimum size.
 
 \end{figure}
 
-\begin{tcolorbox}[enhanced jigsaw, opacitybacktitle=0.6, colback=white, bottomrule=.15mm, opacityback=0, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the FGF}, leftrule=.75mm, bottomtitle=1mm, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, breakable, colframe=quarto-callout-note-color-frame, rightrule=.15mm, toptitle=1mm, titlerule=0mm, left=2mm, arc=.35mm, toprule=.15mm]
+\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the FGF}, bottomtitle=1mm, toprule=.15mm, breakable, toptitle=1mm, colframe=quarto-callout-note-color-frame, titlerule=0mm, opacitybacktitle=0.6, colback=white, left=2mm, colbacktitle=quarto-callout-note-color!10!white, arc=.35mm, coltitle=black, rightrule=.15mm, bottomrule=.15mm, leftrule=.75mm, opacityback=0]
 
 For fused granular fabrication technology, the optimum size for the
 granulometry for printing is between 3 and 5mm. In terms of plastic
