--- a/assets/titlepage.tex
+++ b/assets/titlepage.tex
@@ -108,8 +108,11 @@ Contact: fabio.cruz@univ-lorraine.fr
 \vspace{2cm}
 
 \textbf{Acknowledgment:}\newline
-The authors thank the INEDIT consortium.
-
+The authors express their gratitude to the INEDIT consortium. 
+Additionally, appreciation is extended to the 'Octroi Nancy' Local Third Place and the local actors in Nancy who actively participated in the experimentation of the smart collector. 
+Lastly, the authors acknowledge the valuable scientific collaboration with the Western University in Ontario, Canada, 
+Universidade de Vigo in Spain, 
+and  LRGP (Université de Lorraine) and CESI School in France.
 \vspace{2cm}
 
 \textbf{How to cite:} \newline
