adding the final versoin

--- a/assets/titlepage.tex
+++ b/assets/titlepage.tex
@@ -8,8 +8,11 @@
 		
 		\vfill
 		
-		\textbf{\Huge{\textcolor{darkgray}{ D6.4 3D Printing of recycled plastic demonstrator }}} \\ 
+		\textbf{\Huge{\textcolor{darkgray}{ D6.4 3D Printing of recycled plastic demonstrator: }}} \\[5pt] 
 		
+		\textbf{\LARGE{\textcolor{darkgray}{\emph{The Green FabLab use case at the Université de Lorraine}}}} \\ 
+		 
+		 
 		\vfill
 		
 		\vspace{60mm} 
@@ -101,7 +104,7 @@ Contact: fabio.cruz@univ-lorraine.fr
 \vspace{2cm}
 
 \textbf{Authors:} \newline
-PhD. Fabio A. CRUZ SANCHEZ, M.Sc. Cristian CACERES-MENDOZA, PhD. Fedoua KASMI, PhD. Laurent DUPONT \newline
+PhD. Fabio A. CRUZ SANCHEZ, M.Sc. Cristian CACERES-MENDOZA, PhD. Fedoua KASMI, Phd. Alex GABRIEL, PhD. Laurent DUPONT \newline
 Université de Lorraine, ERPI, F-54000 Nancy, France \newline
 Contact: fabio.cruz@univ-lorraine.fr 
 
@@ -109,16 +112,20 @@ Contact: fabio.cruz@univ-lorraine.fr
 
 \textbf{Acknowledgment:}\newline
 The authors express their gratitude to the INEDIT consortium. 
-Additionally, appreciation is extended to the 'Octroi Nancy' Local Third Place and the local actors in Nancy who actively participated in the experimentation of the smart collector. 
-Lastly, the authors acknowledge the valuable scientific collaboration with the Western University in Ontario, Canada, 
-Universidade de Vigo in Spain, 
-and  LRGP (Université de Lorraine) and CESI School in France.
+Also, appreciation is extended to the 'Octroi Nancy' Local Third Place and 
+the local actors in Nancy who actively participated in the experimentation of the smart collector. 
+Additionally, the authors acknowledge the valuable scientific collaboration with the Western University in Ontario, Canada, specially with Prof Joshua PEARCE, 
+Universidade de Vigo in Spain, Prof Diego Carou, and Prof. Hakim Boudaoud of the UL from the projet ANR (Green Local 3D - ANR-22-CE10-0007)
+the different entities of the Université de Lorraine and local academic actors including LRGP , EMPP, IUT Charlemagne (in particular LP AFTER),
+Institut Carnot ICEEL  and the  CESI and ENSGSI engineering schools.
+Lastly, we wish a kind recognition to valuable work of PhD stu. Catalina Suescun Gonzalez, the technical support of Benjamin Ennesser-Serville and the team of Lorraine Fab Living Lab.   
+Thanks to all the visitors and early adopters of this socio-technical innovation.
+
 \vspace{2cm}
 
 \textbf{How to cite:} \newline
-Fabio A. Cruz Sanchez, Cristian Caceres Mendoza, Fédoua Kasmi, Laurent Dupont. 
-INEDIT Project - Deliverable 6.4 - 3D Printing of recycled plastic demonstrator. 
-Université de Lorraine; European Union’s Horizon 2020 research and innovation programme. 2023 ⟨hal-04371315⟩
+
+Fabio A. Cruz Sanchez, Cristian Caceres Mendoza, Fédoua Kasmi, Alex Gabriel, Laurent Dupont. 3D Printing of recycled plastic demonstrator: The Green FabLab use case at the Université de Lorraine. INEDIT Project - Deliverable 6.4, Université de Lorraine; European Union’s Horizon 2020 research and innovation programme. 2023, pp.60. (https://hal.science/hal-04371315)
 
 
 \vfill
