--- a/Livrable.tex
+++ b/Livrable.tex
@@ -241,7 +241,7 @@
   \apptocmd{\@title}{\par {\large #1 \par}}{}{}
 }
 \makeatother
-\subtitle{Version: janvier 04 / 2024 - 12 : 01}
+\subtitle{Version: January 05 / 2024 - 15 : 11}
 \author{}
 \date{}
 
@@ -256,8 +256,11 @@
 		
 		\vfill
 		
-		\textbf{\Huge{\textcolor{darkgray}{ D6.4 3D Printing of recycled plastic demonstrator }}} \\ 
+		\textbf{\Huge{\textcolor{darkgray}{ D6.4 3D Printing of recycled plastic demonstrator: }}} \\[5pt] 
 		
+		\textbf{\LARGE{\textcolor{darkgray}{\emph{The Green FabLab use case at the Université de Lorraine}}}} \\ 
+		 
+		 
 		\vfill
 		
 		\vspace{60mm} 
@@ -349,7 +352,7 @@ Contact: fabio.cruz@univ-lorraine.fr
 \vspace{2cm}
 
 \textbf{Authors:} \newline
-PhD. Fabio A. CRUZ SANCHEZ, M.Sc. Cristian CACERES-MENDOZA, PhD. Fedoua KASMI, PhD. Laurent DUPONT \newline
+PhD. Fabio A. CRUZ SANCHEZ, M.Sc. Cristian CACERES-MENDOZA, PhD. Fedoua KASMI, Phd. Alex GABRIEL, PhD. Laurent DUPONT \newline
 Université de Lorraine, ERPI, F-54000 Nancy, France \newline
 Contact: fabio.cruz@univ-lorraine.fr 
 
@@ -357,22 +360,26 @@ Contact: fabio.cruz@univ-lorraine.fr
 
 \textbf{Acknowledgment:}\newline
 The authors express their gratitude to the INEDIT consortium. 
-Additionally, appreciation is extended to the 'Octroi Nancy' Local Third Place and the local actors in Nancy who actively participated in the experimentation of the smart collector. 
-Lastly, the authors acknowledge the valuable scientific collaboration with the Western University in Ontario, Canada, 
-Universidade de Vigo in Spain, 
-and  LRGP (Université de Lorraine) and CESI School in France.
+Also, appreciation is extended to the 'Octroi Nancy' Local Third Place and 
+the local actors in Nancy who actively participated in the experimentation of the smart collector. 
+Additionally, the authors acknowledge the valuable scientific collaboration with the Western University in Ontario, Canada, specially with Prof Joshua PEARCE, 
+Universidade de Vigo in Spain, Prof Diego Carou, and Prof. Hakim Boudaoud of the UL from the projet ANR (Green Local 3D - ANR-22-CE10-0007)
+the different entities of the Université de Lorraine and local academic actors including LRGP , EMPP, IUT Charlemagne (in particular LP AFTER),
+Institut Carnot ICEEL  and the  CESI and ENSGSI engineering schools.
+Lastly, we wish a kind recognition to valuable work of PhD stu. Catalina Suescun Gonzalez, the technical support of Benjamin Ennesser-Serville and the team of Lorraine Fab Living Lab.   
+Thanks to all the visitors and early adopters of this socio-technical innovation.
+
 \vspace{2cm}
 
 \textbf{How to cite:} \newline
-Fabio A. Cruz Sanchez, Cristian Caceres Mendoza, Fédoua Kasmi, Laurent Dupont. 
-INEDIT Project - Deliverable 6.4 - 3D Printing of recycled plastic demonstrator. 
-Université de Lorraine; European Union’s Horizon 2020 research and innovation programme. 2023 ⟨hal-04371315⟩
+
+Fabio A. Cruz Sanchez, Cristian Caceres Mendoza, Fédoua Kasmi, Alex Gabriel, Laurent Dupont. 3D Printing of recycled plastic demonstrator: The Green FabLab use case at the Université de Lorraine. INEDIT Project - Deliverable 6.4, Université de Lorraine; European Union’s Horizon 2020 research and innovation programme. 2023, pp.60. (https://hal.science/hal-04371315)
 
 
 \vfill
 \newpage
 
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[enhanced, boxrule=0pt, interior hidden, frame hidden, breakable, borderline west={3pt}{0pt}{shadecolor}, sharp corners]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[frame hidden, borderline west={3pt}{0pt}{shadecolor}, enhanced, sharp corners, boxrule=0pt, interior hidden, breakable]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Table of contents}
 {
@@ -1955,7 +1962,7 @@ collected 3kg per week.
 
 \end{figure}
 
-\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the Recovery process}, bottomtitle=1mm, toprule=.15mm, breakable, toptitle=1mm, colframe=quarto-callout-note-color-frame, titlerule=0mm, opacitybacktitle=0.6, colback=white, left=2mm, colbacktitle=quarto-callout-note-color!10!white, arc=.35mm, coltitle=black, rightrule=.15mm, bottomrule=.15mm, leftrule=.75mm, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, colframe=quarto-callout-note-color-frame, rightrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, opacityback=0, leftrule=.75mm, bottomrule=.15mm, bottomtitle=1mm, toptitle=1mm, titlerule=0mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the Recovery process}, arc=.35mm, breakable, coltitle=black, left=2mm, toprule=.15mm, opacitybacktitle=0.6]
 
 In terms of \emph{KPI} of the recovery, from February 2022 to February
 2023, we have collected a total of \(94.37~kg\) of plastic waste using 8
@@ -2054,7 +2061,7 @@ it is necessary to sieve to identify the optimum size.
 
 \end{figure}
 
-\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the FGF}, bottomtitle=1mm, toprule=.15mm, breakable, toptitle=1mm, colframe=quarto-callout-note-color-frame, titlerule=0mm, opacitybacktitle=0.6, colback=white, left=2mm, colbacktitle=quarto-callout-note-color!10!white, arc=.35mm, coltitle=black, rightrule=.15mm, bottomrule=.15mm, leftrule=.75mm, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, colframe=quarto-callout-note-color-frame, rightrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, opacityback=0, leftrule=.75mm, bottomrule=.15mm, bottomtitle=1mm, toptitle=1mm, titlerule=0mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the FGF}, arc=.35mm, breakable, coltitle=black, left=2mm, toprule=.15mm, opacitybacktitle=0.6]
 
 For fused granular fabrication technology, the optimum size for the
 granulometry for printing is between 3 and 5mm. In terms of plastic
